# ngram-analyzer

./: .gitignore  README.md  database_connection.py  gui.py  main.py  pyproject.toml
settings/: config_sample.ini
src/: cli.py  config_converter.py  controller.py  data_access.py  database_connection.py  database_creation.py  db_tables.sql  gui.py  info.py  login.py  plots.py  shell.py  transfer.py  visualiser.py  visualizer.py
src/cli/: __main__.py  cli.py
src/outlier_detection/: external_od.py  internal_od.py
src/plugins/: EODPlugin.py  ExternalOD.py  IODPlugin.py  InternalOD.py  LOFPlugin.py  MedianDistancePlugin.py  NearestNeighbourPlugin.py  StatPlugin.py  ZScorePlugin.py  base_plugin.py
src/resources/: db_tables.sql
